2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/Inbound__c.object-meta.xml
<CustomObject>
    <description>Records all incoming shipments</description>
    <label>Inbound</label>
    <nameField>
        <displayFormat>DS{YY}/{0}</displayFormat>
        <label>Job_number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>