2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/BIlled__c.field-meta.xml
<CustomField>
    <fullName>BIlled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if billing has been done</description>
    <label>BIlled</label>
    <type>Checkbox</type>
</CustomField>