2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/BL_AWB_no__c.field-meta.xml
<CustomField>
    <fullName>BL_AWB_no__c</fullName>
    <label>BL / AWB no.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>