2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Booker__c.field-meta.xml
<CustomField>
    <fullName>Booker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound</relationshipLabel>
    <relationshipName>R00N200000011kuLEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>