2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Cntr_no__c.field-meta.xml
<CustomField>
    <fullName>Cntr_no__c</fullName>
    <label>Cntr no.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>