2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Delivery schedule</description>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>