2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>Estimated time of arrival</description>
    <label>ETA</label>
    <type>Date</type>
</CustomField>