2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Final_billing__c.field-meta.xml
<CustomField>
    <fullName>Final_billing__c</fullName>
    <label>Final billing</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>