2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/InboundCost__c.field-meta.xml
<CustomField>
    <fullName>InboundCost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costing</label>
    <referenceTo>SFDC_520_Quote_old__c</referenceTo>
    <relationshipLabel>Inbound</relationshipLabel>
    <relationshipName>R00N2000000122N3EAI</relationshipName>
    <type>Lookup</type>
</CustomField>