2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>20&apos;FCL</fullName>
            </value>
            <value>
                <fullName>40&apos;FCL</fullName>
            </value>
            <value>
                <fullName>40HC</fullName>
            </value>
            <value>
                <fullName>45HC</fullName>
            </value>
            <value>
                <fullName>40&apos; + 20&apos;</fullName>
            </value>
            <value>
                <fullName>40&apos; + 40&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>