2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/No_of_pkgs__c.field-meta.xml
<CustomField>
    <fullName>No_of_pkgs__c</fullName>
    <label>No. of pkgs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>