2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Packing_agent__c.field-meta.xml
<CustomField>
    <fullName>Packing_agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound</relationshipLabel>
    <relationshipName>R00N200000011kuiEAA</relationshipName>
    <type>Lookup</type>
</CustomField>