2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <label>POL</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Antwerp</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Augusta</fullName>
            </value>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bangkok</fullName>
            </value>
            <value>
                <fullName>Basel</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Bombay</fullName>
            </value>
            <value>
                <fullName>Bordeaux</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Bremen</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Busan</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Christchurch</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Felixstowe</fullName>
            </value>
            <value>
                <fullName>Frankfurt</fullName>
            </value>
            <value>
                <fullName>Fremantle</fullName>
            </value>
            <value>
                <fullName>Geneva</fullName>
            </value>
            <value>
                <fullName>Genoa</fullName>
            </value>
            <value>
                <fullName>Hamburg</fullName>
            </value>
            <value>
                <fullName>Ho Chi Minh</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Incheon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>