2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Quoted__c.field-meta.xml
<CustomField>
    <fullName>Quoted__c</fullName>
    <label>Quoted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>