2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Rate_Reply__c.field-meta.xml
<CustomField>
    <fullName>Rate_Reply__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Ref</label>
    <referenceTo>Rate_Reply__c</referenceTo>
    <relationshipLabel>Inbound</relationshipLabel>
    <relationshipName>R00N20000001220nEAA</relationshipName>
    <type>Lookup</type>
</CustomField>