2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Shipper_name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inbound</relationshipLabel>
    <relationshipName>R00N200000011ktgEAA</relationshipName>
    <type>Lookup</type>
</CustomField>