2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Storage_charges__c.field-meta.xml
<CustomField>
    <fullName>Storage_charges__c</fullName>
    <label>Storage charges</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Warehouse_storage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>