2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Storage_start__c.field-meta.xml
<CustomField>
    <fullName>Storage_start__c</fullName>
    <label>Storage start</label>
    <type>Date</type>
</CustomField>