2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Vessel_Flight__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Flight__c</fullName>
    <label>Vessel / Flight</label>
    <length>25</length>
    <type>Text</type>
</CustomField>