2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Volume_cuft__c.field-meta.xml
<CustomField>
    <fullName>Volume_cuft__c</fullName>
    <description>Volume in cuft</description>
    <formula>Volume_lbs__c  / 6.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume (cuft)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>