2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Volume_lbs__c.field-meta.xml
<CustomField>
    <fullName>Volume_lbs__c</fullName>
    <label>Volume (lbs)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>