2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound__c/fields/Warehouse_storage__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_storage__c</fullName>
    <label>Warehouse storage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>